--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
 	margin: 0;
-    padding: 0;
-	font-family: "Gilroy-Bold", sans-serif;
+  padding: 0;
+	font-family: 'Gilroy-Bold', sans-serif;
 }
 
 body {
@@ -82,13 +82,75 @@ header hr{
 	background: #F6F6F6;
 	height: 506px;
 	box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 40px;
 }
+
+.Aboutme h1{
+	text-align: left;
+	margin-right: 240px;
+}
+
+.Aboutme p {
+	font-family: "Gilroy-Medium", sans-serif;
+	text-align: center;
+	font-size: 18px;
+}
+
 
 /*-------------- Skills -------------*/
 .Skills	{	
 	height: 610px;
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	align-items: center;
+	gap: 90px;
 }
-/* ------------- Анимации -------------- */
+
+.Skills p {
+	margin-right: 35%;
+	font-family: "Gilroy-Medium", sans-serif;
+}
+
+.base{
+	list-style: none;
+	display: flex;
+	gap: 90px;
+}
+
+.base li {
+	display: inline-block;
+}
+
+.Skillbox {
+	list-style: none;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	gap: 40px;
+
+}
+
+.Skillbox li {
+	display: block;
+}
+
+.Skillbox li p {
+	color: #666;
+}
+
+.Skillbox {
+	transition: transform 0.3s ease;
+}
+
+.Skillbox:hover{
+	transform: scale(1.1);
+}
+/* ------------- Animation -------------- */
 
 [data-animate] {
   opacity: 0;
@@ -101,3 +163,43 @@ header hr{
   transform: translateY(0) !important;
 }
 
+/* ----------- Add font ------------ */
+
+    @font-face {
+    font-family: 'Gilroy-Bold';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Gilroy-Bold'), url('gilroy-bold-webfont/Gilroy-Bold.woff') format('woff');
+    }
+    
+
+    @font-face {
+    font-family: 'Gilroy-Heavy';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Gilroy-Heavy'), url('gilroy-bold-webfont/Gilroy-Heavy.woff') format('woff');
+    }
+    
+
+    @font-face {
+    font-family: 'Gilroy-Light';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Gilroy-Light'), url('gilroy-bold-webfont/Gilroy-Light.woff') format('woff');
+    }
+    
+
+    @font-face {
+    font-family: 'Gilroy-Medium';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Gilroy-Medium'), url('gilroy-bold-webfont/Gilroy-Medium.woff') format('woff');
+    }
+    
+
+    @font-face {
+    font-family: 'Gilroy-Regular';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Gilroy-Regular'), url('gilroy-bold-webfont/Gilroy-Regular.woff') format('woff');
+    }
