--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 * {
 	margin: 0;
   padding: 0;
-	font-family: 'Gilroy-Bold', sans-serif;
+
 }
 
 body {
+	font-family: 'Gilroy-Bold', sans-serif;
 	display: flex;
 	flex-direction: column;
 }
@@ -128,27 +129,101 @@ header hr{
 
 .Skillbox {
 	list-style: none;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	gap: 40px;
-
-}
-
-.Skillbox li {
-	display: block;
 }
 
 .Skillbox li p {
 	color: #666;
 }
 
-.Skillbox {
-	transition: transform 0.3s ease;
+.active{
+	transition: transform .2s;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	gap: 40px;
+}
+.active:hover{
+	transform: scale(1.1);
 }
 
-.Skillbox:hover{
-	transform: scale(1.1);
+/*-------------- Porfolio --------------*/
+
+.Portfolio {
+	background: #F6F6F6;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 80px;
+	padding: 80px;
+}
+
+.Portfolio a {
+	font-family: 'Gilroy-Medium', sans-serif;
+	margin-right: 500px;
+	text-decoration: underline;
+	color: black;
+	transition: 0.3s ease;
+}
+
+.Portfolio a:hover {
+	transform: translateX(10px);
+}
+
+.Portfolio h1 {
+	margin-right: 250px;
+}
+
+/*-------------- Footer ------------ */
+
+footer {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	gap: 45px;
+	padding: 100px;
+}
+
+footer h1 {
+	margin-right: 300px;
+}
+
+footer p {
+	font-size: 18px;
+	text-align: center;
+	margin-right: 550px;
+	font-family: 'Gilroy-Medium', sans-serif;
+}
+footer button { 
+	font-family: 'Gilroy-Bold', sans-serif;
+	height: 42px;
+	width: 180px;
+	border-radius: 20px;
+	font-size: 17px;
+	border: 0;
+	background: black;
+	color: white;
+}
+
+.grey {
+	color: #666;
+	font-family: 'Gilroy-Medium', sans-serif;
+	font-size: 14px;
+	margin-right: 480px;
+}
+
+footer ul {
+	padding: 30px;
+	display: flex;
+	gap: 60px;
+	list-style: none;
+
+}
+
+footer ul li {
+	gap: 60px;
+	display: inline-block;
 }
 /* ------------- Animation -------------- */
 
